tests/solidity-semantic-tests/out/errors/revert_conversion/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/revert_conversion.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0 2 32
    bytecblock "x" "__ctor_pending"
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    bytec_1 // "__ctor_pending"
    intc_0 // 1
    app_global_put
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0xbacc49e3 0x2d4970c7 // method "__postInit()void", method "f()void"
    txna ApplicationArgs 0
    match __postInit f
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/revert_conversion.sol.C.__postInit[routing]() -> void:
__postInit:
    bytec_1 // "__ctor_pending"
    app_global_get
    assert // __postInit already called
    bytec_1 // "__ctor_pending"
    intc_1 // 0
    app_global_put
    bytec_0 // "x"
    intc_2 // 2
    box_create
    pop
    intc_0 // 1
    return


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/revert_conversion.sol.C.f[routing]() -> void:
f:
    txn GroupIndex
    bz f_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

f_ternary_merge@4:
    !
    assert // not payable
    bytec_0 // "x"
    intc_1 // 0
    intc_2 // 2
    box_extract
    btoi
    bytec_0 // "x"
    box_len
    pop
    intc_3 // 32
    +
    bytec_0 // "x"
    swap
    box_resize
    dup
    intc_0 // 1
    +
    itob
    extract 6 2
    bytec_0 // "x"
    intc_1 // 0
    uncover 2
    box_replace
    intc_3 // 32
    *
    intc_2 // 2
    +
    bytec_0 // "x"
    swap
    intc_1 // 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000007
    box_splice
    err // E

f_ternary_false@3:
    intc_1 // 0
    b f_ternary_merge@4
